noinst_LTLIBRARIES = libdts_modules.la 
EXTRA_LTLIBRARIES = 

libdts_modules_la_SOURCES = bytes.cpp empty.cpp ipproto.cpp ntime.cpp string.cpp ubyte.cpp cflow.cpp int.cpp macaddr.cpp nuint32.cpp time.cpp uint32.cpp double.cpp ip.cpp netlong.cpp nushort.cpp refresh.cpp timeval.cpp ushort.cpp packet.cpp sv4.cpp uint64.cpp 
libdts_modules_la_DEPENDENCIES = 
libdts_modules_la_LDFLAGS = -rpath /bogus

